[package]
name = "acl-sys"
version = "1.2.2"
authors = ["Steven Allen <steven@stebalien.com>"]
description = "FFI interface for POSIX Access Control Lists"

documentation = "https://stebalien.github.io/acl-sys/acl_sys/"
repository = "https://github.com/Stebalien/acl-sys"
keywords = ["acl", "filesystem", "fs", "posix", "bindings"]
license = "LGPL-2.1"

[dependencies.libc]
version= "0.2"
default-features = false
